# tessline-3dx

./: .gitignore  CMakeLists.txt  Resources.xml  doxygen.conf
cmake/: CMakeApi.Core.cmake  CMakeApi.Sysconf.cmake  CMakeLists.txt
cmake/api/v1/: Common.Log.cmake  Common.Utils.cmake  Core.Defs.cmake  Core.Filters.cmake  Core.Registry.cmake  Core.Vms.Sysconf.cmake  Core.Vms.Workspace.cmake  Core.Vms.cmake  Gen.Internal.Common.cmake  Gen.Internal.Pch.cmake  Gen.Public.cmake
cmake/api/v2/: CMakeListsProxy.cmake  Core.Filters.cmake  Core.Log.cmake  Core.Registry.cmake  Core.Util.cmake  Vms.Common.cmake  Vms.Impl.Sysconf.cmake  Vms.Impl.Workspace.cmake
source/dependencies/: CMakeLists.txt
source/dependencies/assimp/code/: CMakeLists.txt
source/dependencies/freetype/: CMakeLists.txt
source/dependencies/glew/: CMakeLists.txt
source/dependencies/lua/: CMakeLists.txt
source/dependencies/png/: CMakeLists.txt
source/dependencies/zlib/: CMakeLists.txt
source/engine/components/: CMakeLists.txt
source/engine/components/ts3/core/: CMakeLists.txt  coreEngineState.cpp  coreEngineState.h  exception.cpp  exception.h  exceptionCommon.h  exceptionResult.h  exceptionUtils.h  graphicsTypes.h  mathImports.h  prerequisites.cpp  prerequisites.h
source/engine/components/ts3/engine/: CMakeLists.txt  coreEngineState.h  exception.cpp  exception.h  prerequisites.h
source/engine/components/ts3/gpuapi/: CMakeLists.txt  commandContext.cpp  commandContext.h  commandList.cpp  commandList.h  commandSystem.cpp  commandSystem.h  commonCommandDefs.h  displayCommon.h  displayManager.cpp  displayManager.h  gpuCapabilities.h  gpuDevice.cpp  gpuDevice.h  gpuDeviceNull.h  gpuDriver.cpp  gpuDriver.h  gpuDriverAPI.h  gpuDriverNull.h  gpuDriverPlugin.h  gpuUtils.cpp  gpuUtils.h  prerequisites.cpp  prerequisites.h  presentationLayer.cpp  presentationLayer.h  systemDisplayManager.cpp  systemDisplayManager.h
source/engine/components/ts3/math/: CMakeLists.txt  arrayOps.h  arrayOpsSIMD.inl  color.cpp  color.h  matrix.h  matrixOps.h  matrixOpsSIMD.inl  matrixUtils.h  matrixUtilsSIMD.inl  prerequisites.h  rect.h  utility.h  vector.h  vectorOps.h
source/engine/components/ts3/platform/: CMakeLists.txt  debug.cpp  debug.h  fileLocationInfo.cpp  fileLocationInfo.h  gds.h  platform.h  syncCommon.cpp  syncCommon.h
source/engine/components/ts3/script/: CMakeLists.txt  prerequisites.cpp  prerequisites.h
source/engine/components/ts3/stdext/: CMakeLists.txt  arrayView.h  bitUtils.h  bitmask.h  bitmaskAtomic.h  byteArray.h  byteBuffer.h  chrono.h  concurrentStack.h  fsUtils.cpp  fsUtils.h  gdsCommon.h  gdsStdCore.h  gdsStdSTL.h  gdsUtilities.h  hash.cpp  hash.h  intrusivePtr.h  mapUtils.h  memory.cpp  memory.h  memoryBuffer.h  optional.h  pathNameIterator.h  policyBasedDynamicArray.h  prerequisites.h  range.h  rawDataArray.h  refCounter.h  refWrapper.h  sortedArray.h  staticAlgo.h  staticLimits.h  staticVector.h  stlHelperAlgo.h  stringExt.h  stringUtils.h  stringView.h  syncCommon.cpp  syncCommon.h  (+5 more)
source/engine/components/ts3/system/: CMakeLists.txt  assetCommon.h  assetSystem.cpp  assetSystem.h  assetSystemNative.h  coreSessionContext.cpp  coreSessionContext.h  coreSessionContextNative.h  display.cpp  display.h  displayCommon.cpp  displayCommon.h  displayConfiguration.cpp  displayConfiguration.h  displayDriver.cpp  displayDriver.h  displayDriverNative.cpp  displayDriverNative.h  displayManager.cpp  displayManager.h  displayManagerNative.h  displayNative.h  displaySystem.cpp  displaySystem.h  displaySystemNative.h  dynamicLib.h  eventCommon.h  eventCore.cpp  eventCore.h  eventCoreNative.h  eventCoreTypes.h  eventDefApp.h  eventDefInput.h  eventDefInputKeyboard.h  eventDefInputMouse.h  eventDefInputTouch.h  eventDefWindow.h  eventDefs.h  eventObject.h  eventSource.cpp  (+52 more)
source/engine/drivers/: CMakeLists.txt
source/engine/drivers/ts3/gpuapiDX/: CMakeLists.txt  DX_apiTranslationLayer.cpp  DX_apiTranslationLayer.h  DX_coreAPIProxy.cpp  DX_coreAPIProxy.h  DX_gpuDevice.cpp  DX_gpuDevice.h  DX_gpuDriver.cpp  DX_gpuDriver.h  DX_prerequisites.h  DX_presentationLayer.cpp  DX_presentationLayer.h
source/engine/drivers/ts3/gpuapiDX11/: CMakeLists.txt  DX11_apiTranslationLayer.cpp  DX11_apiTranslationLayer.h  DX11_commandList.cpp  DX11_commandList.h  DX11_commandSystem.cpp  DX11_commandSystem.h  DX11_coreAPIProxy.cpp  DX11_coreAPIProxy.h  DX11_gpuDevice.cpp  DX11_gpuDevice.h  DX11_gpuDriver.cpp  DX11_gpuDriver.h  DX11_gpuDriverAPI.cpp  DX11_gpuDriverAPI.h  DX11_prerequisites.cpp  DX11_prerequisites.h  DX11_presentationLayer.cpp  DX11_presentationLayer.h
source/engine/drivers/ts3/gpuapiDX12/: CMakeLists.txt  DX12_coreAPIProxy.cpp  DX12_coreAPIProxy.h  DX12_gpuCmdContext.cpp  DX12_gpuCmdContext.h  DX12_gpuCmdManager.cpp  DX12_gpuCmdManager.h  DX12_gpuDevice.cpp  DX12_gpuDevice.h  DX12_gpuDriver.cpp  DX12_gpuDriver.h  DX12_gpuDriverAPI.cpp  DX12_gpuDriverAPI.h  DX12_prerequisites.h  DX12_presentationLayer.cpp  DX12_presentationLayer.h
source/engine/drivers/ts3/gpuapiGL/: CMakeLists.txt  GL_apiTranslationLayer.cpp  GL_apiTranslationLayer.h  GL_commandList.cpp  GL_commandList.h  GL_commandSystem.cpp  GL_commandSystem.h  GL_coreAPIProxy.cpp  GL_coreAPIProxy.h  GL_gpuDevice.cpp  GL_gpuDevice.h  GL_gpuDriver.cpp  GL_gpuDriver.h  GL_prerequisites.h  GL_presentationLayer.cpp  GL_presentationLayer.h
source/engine/drivers/ts3/gpuapiGL4/: CMakeLists.txt  GL4_gpuCmdCore.h  GL4_gpuDevice.cpp  GL4_gpuDevice.h  GL4_gpuDriver.cpp  GL4_gpuDriver.h  (+3 more)
source/engine/extensions/: CMakeLists.txt
source/engine/tools/scf-cli-builder/: CMakeLists.txt
source/samples/: CMakeLists.txt
source/samples/appleCocoaTest/: CMakeLists.txt  cocoaMain.cpp
source/samples/cocoa/: CMakeLists.txt  cocoaMain.cpp  cocoaMain.mm
source/samples/gpuapi01/: CMakeLists.txt  gpuapi01-main-old.mm  gpuapi01-main.cpp  gpuapi01-main.mm  gpuapi01-meshDefs.h
source/samples/mathTest/: CMakeLists.txt  mathTest-main.cpp
source/samples/sysTest/: CMakeLists.txt  sysTest-gpuapi.cpp  sysTest-main.cpp
source/samples/test1/: CMakeLists.txt  test1-main.cpp
(+808 files in other folders)
